--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   intl: ^0.18.1
   fl_chart: ^0.64.0
   google_maps_flutter: ^2.5.0
+  flutter_bluetooth_serial: ^0.4.0
+  permission_handler: ^10.4.5
+
 
 dev_dependencies:
   flutter_test:
