--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   intl: ^0.18.1
   fl_chart: ^0.64.0
   google_maps_flutter: ^2.5.0
+  flutter_osm_plugin: ^0.60.5
   flutter_bluetooth_serial: ^0.4.0
   permission_handler: ^10.4.5
 
@@ -72,6 +73,14 @@ flutter:
     - assets/images/yellow.png
     - assets/images/bluetooth_pressed.png
     - assets/images/bluetooth_button.png
+    - assets/images/emot_angry.png 
+    - assets/images/emot_disgusted.png 
+    - assets/images/emot_fearful.png 
+    - assets/images/emot_happy.png 
+    - assets/images/emot_neutral.png 
+    - assets/images/emot_sad.png 
+    - assets/images/emot_surprised.png
+    
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
