--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
     <uses-permission android:name="android.permission.BLUETOOTH_CONNECT"/>
     <uses-permission android:name="android.permission.BLUETOOTH_SCAN"/>
     <application
-        android:label="mobile_app"
+        android:label="ADVISE"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
