--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   web_socket_channel: ^2.4.0
   web_socket_client: ^0.1.0
   args: ^2.4.2
+  wifi_iot: ^0.3.19
 
 
 dev_dependencies:
