--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   web_socket_client: ^0.1.0
   args: ^2.4.2
   wifi_iot: ^0.3.19
+  http: ^1.2.2
+  get_it_mixin: ^4.2.2
+  get_it: ^7.7.0
 
 
 dev_dependencies:
